perf: significantly improve assertion speed
The basic variable descriptor list was computed every time the assertion was called. Which was on every basic variable change. As a result of this change, a test which used to take 2 minutes now takes under 30 seconds.